--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,7 @@
 
 body, html {
   padding: 0;
+  margin:0;
   height: 100%;
   width: 100%;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -62,53 +63,30 @@ body, html {
   margin-top: calc(25% - 200px);
 }
 
-.case {
-  width: 90px;
-  font-size: 25px;
-  height : 90px;
-  margin: 5px;
-  display: inline-block;
-  background: rgba(33,33,33,1.0);
-  color: rgba(255,255,255,1);
-  line-height: 90px;
-  font-family: robotobold;
-  text-align: center;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-.N2{background-color: rgba(243, 156, 18,1.0);}
-.N4{background-color: rgba(192, 57, 43,1.0);}
-.N8{background-color: rgba(241, 196, 15,1.0);}
-.N16{background-color: rgba(142, 68, 173,1.0);}
-.N32{background-color: rgba(41, 128, 185,1.0);}
-.N64{background-color: rgba(22, 160, 133,1.0);}
-.N128{background-color: rgba(189, 195, 199,1.0); color: rgba(0,0,0,1);}
-.N256{background-color: rgba(46, 204, 113,1.0); color: rgba(0,0,0,1);}
-.N512{background-color: rgba(241, 196, 15,1.0); color: rgba(0,0,0,1);}
-.N1024{background-color: rgba(52, 152, 219,1.0); color: rgba(0,0,0,1);}
-.N2048{background-color: rgba(155, 89, 182,1.0); color: rgba(0,0,0,1);}
-
-#highscore{
-  position: absolute;
-  margin-top: 120px;
-  left: 2em;
-  display: block;
+#rond-timer{
   width: 300px;
-  border: 1px solid rgba(0,0,0,1);
-}
-button.centered{margin:auto;left:0;right:0;display: block;}
-.padding{padding: 1em;}
-.border-bottom{border-bottom: 1px solid #212121;}
-#highscore span.score{
-  display: block;
-}
-
-#board{
-  float: right;
-  display: block;
-  height: 200px;
-  width : 200px;
-  border: 1px solid black;
+  height: 300px;
+  line-height: 300px;
+  border-radius : 100%;
+  -webkit-border-radius : 100%;
+  -moz-border-radius : 100%;
+  border: 1px solid rgba(3,169,244,0.8);
+  margin: auto;
+  text-align: center;
+  font-size: 5em;
 }
 
+select{
+  width : 100%;
+  background-color: rgba(3,169,244,0.8);
+  color: rgba(255,255,255,1);
+  border: none;
+  padding: 1em;
+  margin: auto;
+  position: relative;
+  display: block;
+  text-align: center;
+  font-size: 2em;
+}
+h1,p{text-align:center;display: block;}
+p{padding: 0px;font-size: 2em;}
