--- a/styles/main.css
+++ b/styles/main.css
@@ -54,13 +54,14 @@ body, html {
   font-family: robotoregular;
 }
 
-#mainContainer{
-  margin : auto;
-  width: 400px;
-  height: 400px;
-  background: rgba(44, 62, 80,1.0);
-  font-size: 0px;
-  margin-top: calc(25% - 200px);
+.watchout{
+  color: rgba(211,47,47,1);
+  border: 1px solid rgba(211,47,47,1)!important;
+}
+
+.container{
+  width: 100%;
+  height: 100%;
 }
 
 #rond-timer{
@@ -76,17 +77,26 @@ body, html {
   font-size: 5em;
 }
 
+#rond-timer:hover{
+  cursor:pointer;
+}
+
 select{
   width : 100%;
   background-color: rgba(3,169,244,0.8);
   color: rgba(255,255,255,1);
   border: none;
-  padding: 1em;
+  padding: 0.5em;
   margin: auto;
   position: relative;
   display: block;
   text-align: center;
   font-size: 2em;
+  -webkit-appearance:none;
+  border-radius: 0;
+  -webkit-border-radius: 0;
 }
+
+textarea, input { outline: none; }
 h1,p{text-align:center;display: block;}
 p{padding: 0px;font-size: 2em;}
